# msdf-atlas-gen

./: .gitmodules  CMakeLists.txt
cmake/: ClangFormat.cmake
msdf-atlas-gen/: AtlasGenerator.h  AtlasStorage.h  BitmapAtlasStorage.h  BitmapAtlasStorage.hpp  DynamicAtlas.h  DynamicAtlas.hpp  FontGeometry.cpp  FontGeometry.h  GlyphBox.h  GlyphGeometry.cpp  GlyphGeometry.h  ImmediateAtlasGenerator.h  ImmediateAtlasGenerator.hpp  Rectangle.h  RectanglePacker.cpp  RectanglePacker.h  Remap.h  TightAtlasPacker.cpp  TightAtlasPacker.h  Workload.cpp  Workload.h  artery-font-export.cpp  artery-font-export.h  bitmap-blit.cpp  bitmap-blit.h  csv-export.cpp  csv-export.h  glyph-generators.cpp  glyph-generators.h  image-encode.cpp  image-encode.h  image-save.h  image-save.hpp  json-export.cpp  json-export.h  main.cpp  msdf-atlas-gen.h  rectangle-packing.h  rectangle-packing.hpp  shadron-preview-generator.cpp  (+6 more)
